run_3/gds/o1-preview_results/RoundedSquare.err
Error in RoundedSquare.gds:

  File "/tmp/tmpytb6kmfj/temp_script.py", line 106
    pip install gdspy
        ^^^^^^^
SyntaxError: invalid syntax
